# mkdocs-stablelinks-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
mkdocs_stablelinks/: __init__.py  compat.py  config.py  index.py  index_page.py  plugin.py  redirects.py  resolver.py  utils.py  validators.py
tests/: test_compat.py  test_index.py  test_index_page.py  test_plugin.py  test_redirects.py  test_resolver.py  test_validators.py
