[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-stablelinks-plugin"
version = "0.1.0"
description = "Stable internal linking and durable external URLs for MkDocs via a page ID system"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["mkdocs", "mkdocs-plugin", "stablelinks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs>=1.5",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/dsferg/mkdocs-stablelinks-plugin"
Repository = "https://github.com/dsferg/mkdocs-stablelinks-plugin"
Issues = "https://github.com/dsferg/mkdocs-stablelinks-plugin/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.entry-points."mkdocs.plugins"]
stablelinks = "mkdocs_stablelinks.plugin:StablelinksPlugin"

[tool.setuptools.packages.find]
include = ["mkdocs_stablelinks*"]
