[metadata]
name = mkdocs-stablelinks-plugin
version = 0.1.0
description = Stable internal linking and durable external URLs for MkDocs via a page ID system
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.10
keywords = mkdocs, mkdocs-plugin, stablelinks
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Documentation

[options]
packages = mkdocs_stablelinks
install_requires =
    mkdocs>=1.5
    mkdocs-material

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[options.entry_points]
mkdocs.plugins =
    stablelinks = mkdocs_stablelinks.plugin:StablelinksPlugin
